tests/errors/vector-function-pointer-param-runtime-abi.ari
fn main() -> i64 {
  let op: fn(Vec[i64]) -> i64 = main;
  return 0;
}
